--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@ blah, blah, blah, blah
 		<p>Are your eyes watery or itchy?</p>
 		<a href="#pagethree" on click="allergyAdd();"data-role="button">Yes</a>
 		<a href="#pagethree" on click="coldAdd();"data-role="button">No</a>
+		<!-- /question on page two sent to page three --> 
 		<a href="#pagethree">Go to Page Three</a></a>
-	
+		<!-- /answer from page two sent to page three --> 
 	</div><!-- /content -->
 	
 	<div data-role="footer" data-position="fixed">
@@ -77,7 +78,9 @@ blah, blah, blah, blah
 		<p>Do you have a fever?</p>
 		<a href="#pagefour" on click="coldAdd();"data-role="button">Yes</a>
 		<a href="#pagefour" on click="allergyAdd();"data-role="button">No</a>
+			<!-- /question on page 3 sent to page 4 -->
 		<a href="#pagefour">Go to Page Four</a></a>
+			<!-- /answer on page 3 sent to page 4 -->
 	</div><!-- /content -->
 	
 	<div data-role="footer" data-position="fixed">
@@ -96,7 +99,9 @@ blah, blah, blah, blah
 		<p>Do you have a sore throat?</p>
 		<a href="#pagefive" on click="coldAdd();"data-role="button">Yes</a>
 		<a href="#pagefive" on click="allergyAdd();"data-role="button">No</a>
+			<!-- /question on page 4 sent to page 5 -->
 		<a href="#pagefive">Go to Page Five</a></a>
+			<!-- /answer on page 4 sent to page 5 -->
 	</div><!-- /content -->
 	
 	<div data-role="footer" data-position="fixed">
@@ -115,7 +120,9 @@ blah, blah, blah, blah
 		<p>Are your symptoms seasonal or chronic?</p>
 		<a href="#pagesix" on click="allergyAdd();"data-role="button">Yes</a>
 		<a href="#pagesix" on click="coldAdd();"data-role="button">No</a>
+			<!-- /question on page 5 sent to page six -->
 		<a href="#pagesix">Go to Page Five</a></a>
+			<!-- /answer on page 5 sent to page 6 -->
 	</div><!-- /content -->
 	
 	<div data-role="footer" data-position="fixed">
@@ -131,6 +138,7 @@ blah, blah, blah, blah
 	<div data-role="footer" data-position="fixed">
 		<p>This is the footer!</p>
 	</div><!-- /footer -->
+		<!-- /using page 6 as a way to end the code because I didn't know what to do with the answers send from page 5 to 6 -->
 	
 	
      </div><!-- /page -->
