--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@ blah, blah, blah, blah
 		<p>Hello World! Molly Aldred is here.</p>
 		<p>Start the Cold vs. Allergy Survey!</p>
 		<a href="#pagetwo" data-role="button">Go to Page Two</a>
-		<!--/ created a button to take them to the actual first question on page 2 -->
+			<!--/ created a button to take them to the actual first question on page 2 -->
+		<a href="#pagetwo">Go to Page Two</a></a>
+			<!--/ created another line of code to take them to page 2 because the above line didn't, but a button did show -->
 	</div><!-- /content -->
 	
 	<div data-role="footer" data-position="fixed">
