--- a/index.html
+++ b/index.html
@@ -59,12 +59,31 @@ blah, blah, blah, blah
 	<div data-role="content">	
 		<p>Hello World! Molly Aldred is here.</p>
 		<p>Start the Cold vs. Allergy Survey!</p>
-	<!--/letting the use know what they are about to do -->
+			<!--/letting the use know what they are about to do -->
+		,a href="#pagetwo" data-role="buttons">Go to Page Two</a>	
+		<div data-role="content">	
+		<p>Hello World! Molly Aldred is here.</p>
+	</div><!-- /content -->
+	
+	<div data-role="footer" data-position="fixed">
+		<p>This is the footer!</p>
+	</div><!-- /footer -->
+	
+			
+		
+      <div data-role="page" id="pagetwo">
+	<div data-role="header">
+		<h1>Question 1</h1>
+	</div><!-- /header -->
+	
+	<div data-role="content">		
+			
 		<p>Are your eyes watery or itchy?</p>
-		<a href="#pagetwo" on click="allergyAdd();"data-role="button">Yes</a>
-		<a href="#pagetwo" on click="coldAdd();"data-role="button">No</a>
+			<!--/asking first question -->
+		<a href="#pagethree" on click="allergyAdd();"data-role="button">Yes</a>
+		<a href="#pagethree" on click="coldAdd();"data-role="button">No</a>
 		<!-- /question on page two sent to page three --> 
-		<a href="#pagetwo">Go to Page Two</a></a>
+		<a href="#pagethree">Go to Page Three</a></a>
 		<!-- /answer from page two sent to page three --> 
 	</div><!-- /content -->
 	
@@ -74,17 +93,17 @@ blah, blah, blah, blah
 	</div><!-- /footer -->
 	
 	
-       <div data-role="page" id="pagetwo">
+       <div data-role="page" id="pagethree">
 	<div data-role="header"> 
-		<h1>My Hello World App!</h1>
+		<h1>Question 2</h1>
 	</div><!-- /header -->
 	
 	<div data-role="content">
 		<p>Do you have a fever?</p>
-		<a href="#pagethree" on click="coldAdd();"data-role="button">Yes</a>
-		<a href="#pagethree" on click="allergyAdd();"data-role="button">No</a>
+		<a href="#pagefour" on click="coldAdd();"data-role="button">Yes</a>
+		<a href="#pagefour" on click="allergyAdd();"data-role="button">No</a>
 			<!-- /question on page 3 sent to page 4 -->
-		<a href="#pagethree">Go to Page Three</a></a>
+		<a href="#pagefour">Go to Page Four</a></a>
 			<!-- /answer on page 3 sent to page 4 -->
 	</div><!-- /content -->
 	
@@ -95,17 +114,17 @@ blah, blah, blah, blah
 	
 	
 	
-       <div data-role="page" id="pagethree">
+       <div data-role="page" id="pagefour">
 	<div data-role="header"> 
-		<h1>My Hello World App!</h1>
+		<h1>Question 3</h1>
 	</div><!-- /header -->
 	
 	<div data-role="content">
 		<p>Do you have a sore throat?</p>
-		<a href="#pagefour" on click="coldAdd();"data-role="button">Yes</a>
-		<a href="#pagefour" on click="allergyAdd();"data-role="button">No</a>
+		<a href="#pagefive" on click="coldAdd();"data-role="button">Yes</a>
+		<a href="#pagefive" on click="allergyAdd();"data-role="button">No</a>
 			<!-- /question on page 4 sent to page 5 -->
-		<a href="#pagefour">Go to Page Four</a></a>
+		<a href="#pagefive">Go to Page Five</a></a>
 			<!-- /answer on page 4 sent to page 5 -->
 	</div><!-- /content -->
 	
@@ -116,9 +135,9 @@ blah, blah, blah, blah
 	
 	
 	
-      <div data-role="page" id="pagefour">
+      <div data-role="page" id="pagefive">
 	<div data-role="header"> 
-		<h1>My Hello World App!</h1>
+		<h1>Question 4</h1>
 	</div><!-- /header -->
 	
 	<div data-role="content">
@@ -138,7 +157,7 @@ blah, blah, blah, blah
 	<div data-role="page" id="results">
 		
 	<div data-role="header"> 
-		<h1>My Hello World App!</h1>
+		<h1>Results</h1>
 	</div><!-- /header -->
 	
 	<p id="results"></p>
