--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@ blah, blah, blah, blah
 		<p>Hello World! Molly Aldred is here.</p>
 		<p>Start the Cold vs. Allergy Survey!</p>
 			<!--/letting the use know what they are about to do -->
-		,a href="#pagetwo" data-role="buttons">Go to Page Two</a>	
-		<div data-role="content">	
-		<p>Hello World! Molly Aldred is here.</p>
+		<a href="#pagetwo" data-role="buttons">Go to Page Two</a>	
+		<!--created a button to take them to the first question
 	</div><!-- /content -->
 	
 	<div data-role="footer" data-position="fixed">
