--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ blah, blah, blah, blah
 		<p>Hello World! Molly Aldred is here.</p>
 		<p>Start the Cold vs. Allergy Survey!</p>
 			<!--/letting the use know what they are about to do -->
-		<a href="#pagetwo" data-role="buttons">Go to Page Two</a>	
+		<a href="#pagetwo" data-role="button">Go to Page Two</a>	
 		<!--created a button to take them to the first question
 	</div><!-- /content -->
 	
