--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@ blah, blah, blah, blah
 		<p>Start the Cold vs. Allergy Survey!</p>
 			<!--/letting the use know what they are about to do -->
 		<a href="#pagetwo" data-role="button">Go to Page Two</a>	
-		<!--created a button to take them to the first question
+		<a href="#pagetwo">Go to Page Two</a>
+			<!--created a button to take them to the first question -->
 	</div><!-- /content -->
 	
 	<div data-role="footer" data-position="fixed">
