--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ blah, blah, blah, blah
 		<p>Hello World! Molly Aldred is here.</p>
 		<p>Start the Cold vs. Allergy Survey!</p>
 			<!--/letting the use know what they are about to do -->
-		<a href="#pagetwo" data-role="button">Go to Page Two</a>	
-		<a href="#pagetwo">Go to Page Two</a>
+		<a href="#pageone" data-role="button">Go to Page Two</a>	
+		<a href="#pageone">Go to Page Two</a>
 			<!--created a button to take them to the first question -->
 	</div><!-- /content -->
 	
