--- a/index.html
+++ b/index.html
@@ -53,16 +53,14 @@ blah, blah, blah, blah
 
      <div data-role="page" id="pageone">
 	<div data-role="header">
-		<h1>My Hello World App!</h1>
+		<h1>Cold vs. Allergy Survey</h1>
 	</div><!-- /header -->
 	
 	<div data-role="content">	
-		<p>Hello World! Molly Aldred is here.</p>
 		<p>Start the Cold vs. Allergy Survey!</p>
 			<!--/letting the use know what they are about to do -->
-		<a href="#pageone" data-role="button">Go to Page Two</a>	
-		<a href="#pageone">Go to Page Two</a>
-			<!--created a button to take them to the first question -->
+		<a href="#pagetwo" data-role="button">Go to Page Two</a>	
+			<!--created a button to take them to the first question on page 2-->
 	</div><!-- /content -->
 	
 	<div data-role="footer" data-position="fixed">
@@ -82,9 +80,9 @@ blah, blah, blah, blah
 			<!--/asking first question -->
 		<a href="#pagethree" on click="allergyAdd();"data-role="button">Yes</a>
 		<a href="#pagethree" on click="coldAdd();"data-role="button">No</a>
-		<!-- /question on page two sent to page three --> 
+			<!-- /question on page two sent to page three --> 
 		<a href="#pagethree">Go to Page Three</a></a>
-		<!-- /answer from page two sent to page three --> 
+			<!-- /answer from page two sent to page three --> 
 	</div><!-- /content -->
 	
 	<div data-role="footer" data-position="fixed">
