--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@ blah, blah, blah, blah
 	<div data-role="content">	
 		<p>Start the Cold vs. Allergy Survey!</p>
 			<!--/letting the user know what they are about to do -->
-		<a href="#pagetwo" data-role="button">Go to Page Two</a>	
+		<a href="#pagetwo" >Go to Page Two</a>	
 			<!--button to take them to the first question on page 2-->
 	</div><!-- /content -->
 	
 	<div data-role="footer" data-position="fixed">
-		<p>This is the footer!</p>
+		<p>Page 1</p>
 	</div><!-- /footer -->
 	
 			
@@ -67,7 +67,7 @@ blah, blah, blah, blah
 	</div><!-- /content -->
 	
 	<div data-role="footer" data-position="fixed">
-		<p>This is the footer!</p>
+		<p>Page 2</p>
 	</div><!-- /footer -->
 	
 
