--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@ blah, blah, blah, blah
 	</div><!-- /header -->
 	
 	<div data-role="content">	
-		<p>Start the Cold vs. Allergy Survey!</p>
+		<p>Cold vs. Allergy Survey!</p>
 			<!--/letting the user know what they are about to do -->
-		<a href="#pagetwo" >Go to Page Two</a>	
+		<a href="#pagetwo">Go to Page Two</a>	
 			<!--button to take them to the first question on page 2-->
 	</div><!-- /content -->
 	
@@ -63,6 +63,8 @@ blah, blah, blah, blah
 	<div data-role="content">		
 		<p>Are your eyes watery or itchy?</p>
 			<!--/asking first question -->
+		<a href="pageone">Go to Page One</a>
+			<!--/button to take them to page 1 -->
 	
 	</div><!-- /content -->
 	
