--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ blah, blah, blah, blah
 	<div data-role="content">	
 		<p>Start the Cold vs. Allergy Survey!</p>
 			<!--/letting the use know what they are about to do -->
-		<a href="#pagetwo" data-role="button">Go to pagetwo</a>	
+		<a href="#pagetwo" data-role="button">Go to Page Two</a>	
 			<!--created a button to take them to the first question on page 2-->
 	</div><!-- /content -->
 	
