--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ blah, blah, blah, blah
 	<div data-role="footer" data-position="fixed">
 		<p>Page 1</p>
 	</div><!-- /footer -->
+     </div>
 	
 			
 		
@@ -93,6 +94,7 @@ blah, blah, blah, blah
 		<p>Page 2</p>
 	</div><!-- /footer -->
 	
+	</div>
 	
       <div data-role="page" id="pagethree">
 	<div data-role="header">
@@ -111,7 +113,7 @@ blah, blah, blah, blah
 	<div data-role="footer" data-position="fixed">
 		<p>Page 3</p>
 	</div><!-- /footer -->
-	
+	</div>
 	
 	
 	
