--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ blah, blah, blah, blah
 	<div data-role="footer" data-position="fixed">
 		<p>Page 1</p>
 	</div><!-- /footer -->
-     </div>
-	
+     </div><!--/ end of page 1 -->
+			
 			
 		
      <div data-role="page" id="pagetwo">
@@ -86,15 +86,16 @@ blah, blah, blah, blah
 		<a href="#pagethree" onclick="allergyAdd();"data-role="button">Yes</a>
 		<a href="#pagethree" onclick="coldAdd();"data-role="button">No</a>
 			<!-- /question on page two sent to page three -->
-		<a href="#pagethree">Go to Page Three</a></a>
+		<a href="#pagethree">Go to Page Three</a>
 			<!-- /answer from page two sent to page three -->
 	</div><!-- /content -->
 	
 	<div data-role="footer" data-position="fixed">
 		<p>Page 2</p>
 	</div><!-- /footer -->
+	</div><!--/ end of page 2 -->
 	
-	</div>
+	
 	
       <div data-role="page" id="pagethree">
 	<div data-role="header">
@@ -113,7 +114,7 @@ blah, blah, blah, blah
 	<div data-role="footer" data-position="fixed">
 		<p>Page 3</p>
 	</div><!-- /footer -->
-	</div>
+	</div><!--/ end of page 3 -->
 	
 	
 	
@@ -134,7 +135,7 @@ blah, blah, blah, blah
 	<div data-role="footer" data-position="fixed">
 		<p>Page 4</p>
 	</div><!-- /footer -->
-	
+	</div><!--/ end of page 4 -->
 	
 	
 	
@@ -155,7 +156,7 @@ blah, blah, blah, blah
 	<div data-role="footer" data-position="fixed">
 		<p>Page 5</p>
 	</div><!-- /footer -->
-	
+	</div><!--/ end of page 5 -->
 
 
 
@@ -181,7 +182,7 @@ blah, blah, blah, blah
 		<p>Page 6</p>
 	</div><!-- /footer -->
 		<!-- /using page 6 as a way to end the code because I didn't know what to do with the answers send from page 5 to 6 -->
-	
+	</div><!--/ end of results page -->
 	
     </div><!-- /page -->
   </body>
