--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@ blah, blah, blah, blah
 	
 	<div data-role="content">
 		<p>Are your symptoms seasonal or chronic?</p>
-		<a href="#pageresults" onclick="allergyAdd();"data-role="button">Yes</a>
-		<a href="#pageresults" onclick="coldAdd();"data-role="button">No</a>
-			<!-- /question on page 5 sent to results page -->
+		<a href="#pagesix" onclick="allergyAdd();"data-role="button">Yes</a>
+		<a href="#pagesix" onclick="coldAdd();"data-role="button">No</a>
+			<!-- /question on page 5 sent to page 6 -->
 		<a href="#pagesix">Go to Page 6</a></a>
-			<!-- /answer on page 5 sent to results page -->
+			<!-- /answer on page 5 sent to page 6 -->
 	</div><!-- /content -->
 	
 	<div data-role="footer" data-position="fixed">
@@ -180,9 +180,9 @@ blah, blah, blah, blah
 		<p>Are you achey?</p>
 		<a href="#pageseven" onclick="coldAdd();"data-role="button">Yes</a>
 		<a href="#pageseven" onclick="allergyAdd();"data-role="button">No</a>
-			<!-- /question on page 5 sent to results page -->
+			<!-- /question on page 6 sent to page 7-->
 		<a href="#pageseven">Go to Page 7</a></a>
-			<!-- /answer on page 5 sent to results page -->
+			<!-- /answer on page 6 sent to page 7 -->
 	</div><!-- /content -->
 	
 	<div data-role="footer" data-position="fixed">
@@ -200,9 +200,9 @@ blah, blah, blah, blah
 		<p>Is your nasal discharge green or yellow?</p>
 		<a href="#pageresults" onclick="coldAdd();"data-role="button">Yes</a>
 		<a href="#pageresults" onclick="allergyAdd();"data-role="button">No</a>
-			<!-- /question on page 5 sent to results page -->
+			<!-- /question on page 7 sent to results page -->
 		<a href="#pageresults">Go to Results</a></a>
-			<!-- /answer on page 5 sent to results page -->
+			<!-- /answer on page 7 sent to results page -->
 	</div><!-- /content -->
 	
 	<div data-role="footer" data-position="fixed">
