--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ blah, blah, blah, blah
 	<div data-role="content">	
 		<p>Start the Cold vs. Allergy Survey!</p>
 			<!--/letting the use know what they are about to do -->
-		<a href="#pagetwo" data-role="button">Go to Page Two</a>	
+		<a href="#pagetwo" data-role="button">Start the Quiz!</a>	
 			<!--created a button to take them to the first question on page 2-->
 	</div><!-- /content -->
 	
@@ -167,7 +167,7 @@ blah, blah, blah, blah
 	<div data-role="footer" data-position="fixed">
 		<p>Page 6</p>
 	</div><!-- /footer -->
-	</div><!--/ end of page 6 -->
+	</div><!--/ end of page 5 -->
 	
 	
 
@@ -223,7 +223,7 @@ blah, blah, blah, blah
 		<p id="result"></p>
 		<p>Thanks for using the app!</p>
 		<a href="#pageone" onclick="resetVars();" data-role="button">Take Again</a><!-- button allows them to take the quiz again, starting the variables cold and allergy over again -->
-	</div><!-- /content -->	
+	</div><!-- /content that gets and progects the results by calling result function -->	
 			
 	<div data-role="footer" data-position="fixed">
 		<p>Page 8</p>
