--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@ blah, blah, blah, blah
 	</div><!-- /header -->
 	
 	<div data-role="content">
-		<p>Is your nasal discharge green or yellow?</p>
-		<a href="#pageresults" onclick="coldAdd();"data-role="button">Yes</a>
-		<a href="#pageresults" onclick="allergyAdd();"data-role="button">No</a>
+		<p>Is your nasal discharge clear?</p>
+		<a href="#pageresults" onclick="allergyAdd();"data-role="button">Yes</a>
+		<a href="#pageresults" onclick="coldAdd();"data-role="button">No</a>
 			<!-- /question on page 7 sent to results page -->
 		<a href="#pageresults">Go to Results</a></a>
 			<!-- /answer on page 7 sent to results page -->
