Commented out page 2 to see if I could get page 1 to format correctly

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Brief Description of Goal of Code:
 The following code goes through a series of questions in which it tries to diagnose if someone has a concussion.
  
 Known Issues:
-
+Not different pages
 -->
 
    <head> 
@@ -38,6 +38,8 @@ Known Issues:
      </script>
     
   </head>
+ 
+ 
  
   <body>
 
@@ -59,12 +61,12 @@ Known Issues:
      </div><!--/ end of page 1 -->
 			
 			
-		
+<!--/		
      <div data-role="page" id="pagetwo">
 	<div data-role="header">
-		<h1>RED FLAG</h1>
+		<h1>RED FLAGS</h1>
 	</div><!-- /header -->
-	
+	<!--
 	<div data-role="content">		
 			
 		<p>If you are exibiting any of the following symtoms, seek medical attention immediately:</p>
@@ -82,16 +84,16 @@ Known Issues:
 		<p>-Change in state of consciousness</p>
 	
 			<!--/ red flag disclaimers in list form -->
-		
+	<!--/	
 	</div><!-- /content -->
-	
+	<!--/
 	<div data-role="footer" data-position="fixed">
 		<p>Page 2</p>
 	</div><!-- /footer -->
-	
+<!--/	
      </div><!--/ end of page 2 -->
 	
-	
+
 	
     
 	
