Uncommented the page 2...but it's not working even with it commented out

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@ Not different pages
      </div><!--/ end of page 1 -->
 			
 			
-<!--/		
+		
      <div data-role="page" id="pagetwo">
 	<div data-role="header">
 		<h1>RED FLAGS</h1>
 	</div><!-- /header -->
-	<!--
+
 	<div data-role="content">		
 			
 		<p>If you are exibiting any of the following symtoms, seek medical attention immediately:</p>
@@ -84,19 +84,19 @@ Not different pages
 		<p>-Change in state of consciousness</p>
 	
 			<!--/ red flag disclaimers in list form -->
-	<!--/	
+	
 	</div><!-- /content -->
-	<!--/
+
 	<div data-role="footer" data-position="fixed">
 		<p>Page 2</p>
 	</div><!-- /footer -->
-<!--/	
+	
      </div><!--/ end of page 2 -->
 	
 
 	
     
 	
-    </div><!-- /page --> <!--end of code...it all works!--> 
+    </div><!-- /page --> <!--end of code--> 
   </body>
 </html>
