--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Not different pages
 
     <div data-role="page" id="pageone">
 	<div data-role="header">
-		<h1>Concussion Diagnostic Test</h1>
+		<h1>Concussion Diagnostic Test!</h1>
 	</div><!-- /header -->
 	
 	<div data-role="content">	
