Added button to take back to page 1

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@ Not different pages
 		<p>-Change in state of consciousness</p>
 	
 			<!--/ red flag disclaimers in list form -->
-	
+		<a href="#pageone" data-role="button">Back to page 1</a>	
+			<!--created a button to take them back to page 1-->
 	</div><!-- /content -->
 
 	<div data-role="footer" data-position="fixed">
