--- a/index.html
+++ b/index.html
@@ -50,12 +50,7 @@ Not different pages
 		</div><!-- /header -->
 	
 		<div data-role="content">	
-			<p>A concussion is a type of brain injury typically caused by a traumatic bump or blow to the head. Typical symptoms of concussions are:</p>
-			<p>-Headaches</p>
-			<p>-Nausea and dizziness</p>
-			<p>-Sensitivity to light or nosie</p>
-			<p>-Confusion and concnetraiton problems</p>
-			<p></p>
+		
 			<p>This app will help diagnose concussions based on pre-test and post-test results, historical test results, and neurological test results. Click below to start the conussion test.</p>
 				<!--/letting the use know what they are about to do -->
 			<a href="#pagetwo" data-role="button">Start the test</a>	
@@ -75,7 +70,13 @@ Not different pages
 		</div><!-- /header -->
 
 		<div data-role="content">		
+			<p>A concussion is a type of brain injury typically caused by a traumatic bump or blow to the head.</p>
 			
+			<p>   </p>
+			<p>   </p>
+				<!--/trying to get spaces between the concussion statements and Red Flags -->
+			
+			<p>RED FLAGS: </p>
 			<p>If you are exibiting any of the following symtoms, seek medical attention immediately:</p>
 			<p>-Headaches that worsen</p>
 			<p>-Seizures</p>
