Line wasn't skipped so tried just a <p> instead

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@ Not different pages
 	
 		<div data-role="content">	
 		
-			<p>This app will help diagnose concussions based on pre-test and post-test results, historical test results, and neurological test results. Click below to start the conussion test.</p>
+			<p>This app will help diagnose concussions based on pre-test and post-test results, historical test results, and neurological test results.</p>
+			<p>Click below to start the conussion test.</p>
 				<!--/letting the use know what they are about to do -->
 			<a href="#pagetwo" data-role="button">Start the test</a>	
 				<!--created a button to take them to page 2-->
@@ -70,13 +71,9 @@ Not different pages
 		</div><!-- /header -->
 
 		<div data-role="content">		
-			<p>A concussion is a type of brain injury typically caused by a traumatic bump or blow to the head.</p>
-			
-			<p>   </p>
-			<p>   </p>
-				<!--/trying to get spaces between the concussion statements and Red Flags -->
-			
-			<p>RED FLAGS: </p>
+			<p>A concussion is a type of brain injury typically caused by a traumatic bump or blow to the head. Brain injuries are serious and can result in permanent damage if not taken care of properly.</p>
+			<p>
+				<!--/trying to skip a line-->
 			<p>If you are exibiting any of the following symtoms, seek medical attention immediately:</p>
 			<p>-Headaches that worsen</p>
 			<p>-Seizures</p>
