<p> still isn't working :( Fixed some spelling errors

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Not different pages
 			<p>A concussion is a type of brain injury typically caused by a traumatic bump or blow to the head. Brain injuries are serious and can result in permanent damage if not taken care of properly.</p>
 			<p>
 				<!--/trying to skip a line-->
-			<p>If you are exibiting any of the following symtoms, seek medical attention immediately:</p>
+			<p>If you are exibiting any of the following symptoms, seek medical attention immediately:</p>
 			<p>-Headaches that worsen</p>
 			<p>-Seizures</p>
 			<p>-Focal neurological signs</p>
