Added a fourth page, button to go to 4th page on page 3, and a button on page 4 to go back to page 1

--- a/index.html
+++ b/index.html
@@ -114,12 +114,33 @@ Not different pages
 		
 			<a href="#pageone" data-role="button">Back to page 1</a>	
 				<!--created a button to take them back to page 1-->
-		<!--	<a href="#pagethree" data-role="button">To page 3</a>	
+			<a href="#pagefour" data-role="button">To page 4</a>	
 				<!--created a button to take them back to page 1-->
 		</div><!-- /content -->
 	
 		<div data-role="footer" data-position="fixed">
 			<p>Page 3</p>
+		</div><!-- /footer -->
+		
+	     </div><!--/ end of page 2 -->	
+	     
+	<div data-role="page" id="pagefour">
+		<div data-role="header">
+			<h1>Neurological Test</h1>
+		</div><!-- /header -->
+	
+		<div data-role="content">
+					
+			<p>Questions here</p>	
+		
+			<a href="#pageone" data-role="button">Back to page 1</a>	
+				<!--created a button to take them back to page 1-->
+		<!--	<a href="#pagethree" data-role="button">To page 3</a>	
+				<!--created a button to take them back to page 1-->
+		</div><!-- /content -->
+	
+		<div data-role="footer" data-position="fixed">
+			<p>Page 4</p>
 		</div><!-- /footer -->
 		
 	     </div><!--/ end of page 2 -->	
