--- a/index.html
+++ b/index.html
@@ -110,7 +110,23 @@ Not different pages
 	
 		<div data-role="content">
 					
-			<p>Questions here</p>	
+			<p>Questions here</p>
+			
+			<p class="question">1. Is there evidence of a forcible blow to your head (direct or indirect)?</p>
+				<!--/ Question 1 --> 
+			<ul class="answers">
+			<input type="radio"name="q1"value="a"id="q1a"><label for="q1a">Yes</label><br/>
+			<input type="radio"name="q1"value="b"id="q1b"><label for="q1b">No</label><br/>
+			<input type="radio"name="q1"value="c"id="q1c"><label for="q1c">I don't know</label><br/>
+				<!--Answers to question 1 -->
+			</ul><!--end of question 1 -->
+				
+		
+		
+		
+		
+		
+		
 		
 			<a href="#pageone" data-role="button">Back to page 1</a>	
 				<!--created a button to take them back to page 1-->
