Added questions 2 and 3

--- a/index.html
+++ b/index.html
@@ -122,7 +122,26 @@ Not different pages
 			</ul><!--end of question 1 -->
 				
 		
-		
+			<p class="question">2. Do you have intercranial injury or skull fracture?</p>
+				<!--/ Question 2 --> 
+			<ul class="answers">
+			<input type="radio"name="q2"value="a"id="q2a"><label for="q2a">Yes</label><br/>
+			<input type="radio"name="q2"value="b"id="q2b"><label for="q2b">No</label><br/>
+			<input type="radio"name="q2"value="c"id="q2c"><label for="q2c">I don't know</label><br/>
+				<!--Answers to question 2 -->
+			</ul><!--end of question 2 -->
+			
+			<p class="question">3. Where on your head was hit?</p>
+				<!--/ Question 3 --> 
+			<ul class="answers">
+			<input type="radio"name="q3"value="a"id="q3a"><label for="q3a">Front</label><br/>
+			<input type="radio"name="q3"value="b"id="q3b"><label for="q3b">Left Side</label><br/>
+			<input type="radio"name="q3"value="c"id="q3c"><label for="q3c">Right Side</label><br/>
+			<input type="radio"name="q4"value="d"id="q4d"><label for="q4d">Back</label><br/>
+			<input type="radio"name="q5"value="e"id="q5e"><label for="q5e">Neck</label><br/>
+			<input type="radio"name="q6"value="f"id="q6f"><label for="q6f">Indirect Force</label><br/>
+				<!--Answers to question 3 -->
+			</ul><!--end of question 3 -->
 		
 		
 		
