Added questions 4 and 5

--- a/index.html
+++ b/index.html
@@ -137,13 +137,31 @@ Not different pages
 			<input type="radio"name="q3"value="a"id="q3a"><label for="q3a">Front</label><br/>
 			<input type="radio"name="q3"value="b"id="q3b"><label for="q3b">Left Side</label><br/>
 			<input type="radio"name="q3"value="c"id="q3c"><label for="q3c">Right Side</label><br/>
-			<input type="radio"name="q4"value="d"id="q4d"><label for="q4d">Back</label><br/>
-			<input type="radio"name="q5"value="e"id="q5e"><label for="q5e">Neck</label><br/>
-			<input type="radio"name="q6"value="f"id="q6f"><label for="q6f">Indirect Force</label><br/>
+			<input type="radio"name="q3"value="d"id="q3d"><label for="q3d">Back</label><br/>
+			<input type="radio"name="q3"value="e"id="q3e"><label for="q3e">Neck</label><br/>
+			<input type="radio"name="q3"value="f"id="q3f"><label for="q3f">Indirect Force</label><br/>
 				<!--Answers to question 3 -->
 			</ul><!--end of question 3 -->
+			
+			<p class="question">4. What caused your head injury?</p>
+				<!--/ Question 4 --> 
+			<ul class="answers">
+			<input type="radio"name="q4"value="a"id="q4a"><label for="q4a">Motor Vehicle Crash (MVC)</label><br/>
+			<input type="radio"name="q4"value="b"id="q4b"><label for="q4b">Pedestrian - MVC</label><br/>
+			<input type="radio"name="q4"value="c"id="q4c"><label for="q4c">Fall</label><br/>
+			<input type="radio"name="q4"value="d"id="q4d"><label for="q4d">Assault</label><br/>
+			<input type="radio"name="q4"value="e"id="q4e"><label for="q4e">Sports</label><br/>
+			<input type="radio"name="q4"value="f"id="q4f"><label for="q4f">Other</label><br/>
+				<!--Answers to question 4 -->
+			</ul><!--end of question 4 -->
 		
-		
+			<p class="question">5. Are there any events just BEFORE the injury that you have no memory of, even briefly?</p>
+				<!--/ Question 5 --> 
+			<ul class="answers">
+			<input type="radio"name="q5"value="a"id="q5a"><label for="q5a">Yes</label><br/>
+			<input type="radio"name="q5"value="b"id="q5b"><label for="q5b">No</label><br/>
+				<!--Answers to question 5 -->
+			</ul><!--end of question 5 -->
 		
 		
 		
